vibecoded datagen 2